Fixed route heading for dark mode
Fixed route heading for dark mode

--- a/react-frontend/internship-api-frontend/src/pages/route/RouteDetailsPage.css
+++ b/react-frontend/internship-api-frontend/src/pages/route/RouteDetailsPage.css
@@ -2,3 +2,7 @@
     display:inline-block;
     
 }
+
+.card-title{
+    color: black !important;
+}
